--- a/dentalacme.html
+++ b/dentalacme.html
@@ -27,8 +27,8 @@
         </a>
         <div class="w3-bar-block w3-center">
           <h1>Planos Acme co</h1><br>
-          <a href="http://127.0.0.1:5501/norteeuropa.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Norte Europa</a>
-          <a href="http://127.0.0.1:5501/index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Inicio</a>
+          <a href="https://github.com/menu95/planos/norteeuropa" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Norte Europa</a>
+          <a href="https://github.com/menu95/planos/index" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Inicio</a>
 
         </div>
     </nav>
