--- a/dentaltio.html
+++ b/dentaltio.html
@@ -27,9 +27,9 @@
         </a>
         <div class="w3-bar-block w3-center">
             <h1>Planos Tio Patinhas</h1><br>
-            <a href="http://127.0.0.1:5501/mentesa.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Mente Sã, Corpo São</a>
-            <a href="http://127.0.0.1:5501/pampulha.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Pampulha Intermedica</a>
-            <a href="http://127.0.0.1:5501/index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Inicio</a>
+            <a href="https://github.com/menu95/planos/mentesa" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Mente Sã, Corpo São</a>
+            <a href="https://github.com/menu95/planos/pampulha" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Pampulha Intermedica</a>
+            <a href="https://github.com/menu95/planos/home" class="w3-bar-item w3-button w3-text-grey w3-hover-white">Inicio</a>
 
         </div>
     </nav>
