--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   <div class="w3-bar-block">
     <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>Fechar</a>
-    <a href="http://127.0.0.1:5501/dentalacme.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Dental Sorriso</a>
-    <a href="http://127.0.0.1:5501/norteeuropa.html" class="w3-bar-item w3-button w3-padding "><i class="fa fa-users fa-fw"></i> Norte Europa</a>
+    <a href="https://github.com/menu95/planos/dentalacme" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Dental Sorriso</a>
+    <a href="https://github.com/menu95/planos/norteeuropa" class="w3-bar-item w3-button w3-padding "><i class="fa fa-users fa-fw"></i> Norte Europa</a>
     <div class="w3-container">
       <h5>Acme co</h5>
     </div>
@@ -42,9 +42,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-container">
       <h5>Tio Patinhas</h5>
     </div>
-    <a href="http://127.0.0.1:5501/dentaltio.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Dental Sorriso</a>
-    <a href="http://127.0.0.1:5501/mentesa.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Mente Sã, Corpo São</a>
-    <a href="http://127.0.0.1:5501/pampulha.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Pampulha intermedica</a>
+    <a href="https://github.com/menu95/planos/dentaltio" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Dental Sorriso</a>
+    <a href="https://github.com/menu95/planos/mentesa" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Mente Sã, Corpo São</a>
+    <a href="https://github.com/menu95/planos/pampulha" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw"></i> Pampulha intermedica</a>
 
   </div>
 </nav>
@@ -61,7 +61,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h5><b><i class="fa fa-home"></i> Todos os Planos</b></h5>
   </header>
   <div class="w3-row-padding w3-margin-bottom">
-    <div id="dentalt" class="w3-quarter" onclick="window.location='http://127.0.0.1:5501/dentaltio.html';">
+    <div id="dentalt" class="w3-quarter" onclick="window.location='https://github.com/menu95/planos/dentaltio';">
       <div class="w3-container w3-teal w3-padding-16">
         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
         <div class="w3-right">
@@ -71,7 +71,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h4>Dental Sorriso</h4>
       </div>
     </div>    
-    <div id="dentalac" class="w3-quarter" onclick="window.location='http://127.0.0.1:5501/dentalacme.html';">
+    <div id="dentalac" class="w3-quarter" onclick="window.location='https://github.com/menu95/planos/dentalacme';">
       <div class="w3-container w3-blue w3-padding-16">
         <div class="w3-left"><i class="fa fa-heart w3-xxxlarge"></i></div>
         <div class="w3-right">
@@ -81,7 +81,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h4>Dental Sorriso</h4>
       </div>
     </div>
-    <div id="norteur" class="w3-quarter" onclick="window.location='http://127.0.0.1:5501/norteeuropa.html';">
+    <div id="norteur" class="w3-quarter" onclick="window.location='https://github.com/menu95/planos/norteeuropa';">
       <div class="w3-container w3-teal w3-padding-16">
         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
         <div class="w3-right">
@@ -91,7 +91,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h4>Norte Europa</h4>
       </div>
     </div>
-    <div id="mentes" class="w3-quarter" onclick="window.location='http://127.0.0.1:5501/mentesa.html';">
+    <div id="mentes" class="w3-quarter" onclick="window.location='https://github.com/menu95/planos/mentesa';">
       <div class="w3-container w3-blue w3-padding-16">
         <div class="w3-left"><i class="fa fa-heart w3-xxxlarge"></i></div>
         <div class="w3-right">
@@ -101,7 +101,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         <h4>Mente Sã, Corpo São</h4>
       </div>
     </div>
-    <div id="pa,pulh" class="w3-quarter" style="padding-top: 0.5cm ;" onclick="window.location='http://127.0.0.1:5501/pampulha.html';" >
+    <div id="pa,pulh" class="w3-quarter" style="padding-top: 0.5cm ;" onclick="window.location='https://github.com/menu95/planos/pampulha';" >
       <div class="w3-container w3-teal w3-text-white w3-padding-16">
         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
         <div class="w3-right">
